--- a/scss/blocks/checkbox.scss
+++ b/scss/blocks/checkbox.scss
@@ -36,7 +36,7 @@
         height: 13px;
     
         
-        background: url("../../img/decor/decor_forms/Vector.svg") center center no-repeat;
+        background: url("../img/decor/decor_forms/Vector.svg") center center no-repeat;
        
         background-size:13px 13px;
         position: absolute;
