--- a/scss/blocks/reviews.scss
+++ b/scss/blocks/reviews.scss
@@ -3,7 +3,7 @@
 }
 .reviews__display{
     
-    background: url('../../img/decor/decor__reviews/berries.png') right top 10% no-repeat;
+    background: url('../img/decor/decor__reviews/berries.png') right top 10% no-repeat;
     background-color:  #F8FAF9 ;
     margin-bottom: 15px;
     position: relative;
