--- a/scss/blocks/advantages.scss
+++ b/scss/blocks/advantages.scss
@@ -10,7 +10,7 @@
     position: relative;
 
     &::before{
-        content: url('../../img/decor/decor__why/Shape.png');
+        content: url('../img/decor/decor__why/Shape.png');
         display: block;
         position: absolute;
         top: 60px;
