--- a/scss/blocks/fixed-menu.scss
+++ b/scss/blocks/fixed-menu.scss
@@ -11,10 +11,13 @@
 .fixed-menu__item{
     margin-bottom: 5px;
     
-    &__active{
+    &_active{
         .fixed-menu__link{
             border-color: #fff;
         }       
+    }
+    &:last-child{
+        margin-bottom: 0;
     }
 }
 .fixed-menu__link{
