--- a/scss/blocks/reviews.scss
+++ b/scss/blocks/reviews.scss
@@ -1,5 +1,19 @@
 .reviews{
+    &::before{
+        content: url('../../img/decor/decor__reviews/berries5.png');
 
+        border-radius: 50%;
+        display: block;
+        width: 83px;
+        height: 83px;
+        background: #fff;
+        position: absolute;
+        right: 4%;
+        top: -55px;
+    
+        
+
+    }
 }
 .reviews__display{
     
@@ -10,7 +24,7 @@
     overflow: hidden;
 
     &::before{
-        content: "";
+      
 
         border-radius: 50%;
         display: block;
