--- a/scss/blocks/btn.scss
+++ b/scss/blocks/btn.scss
@@ -14,6 +14,7 @@
         &:hover{
             background:  $green;
             color: #fff;
+            transition: .6s;
         }
     }
 
@@ -22,6 +23,7 @@
         color:#fff;
         &:hover{
             background: $darkGreen;
+            transition: .6s;
         }
     }
     &_theme_noBg{
@@ -32,7 +34,8 @@
         color: #497870;
 
         &:hover{
-            color: $black
+            color: $black;
+            transition: .6s;
         }
     }
 }
