--- a/scss/blocks/forms.scss
+++ b/scss/blocks/forms.scss
@@ -15,6 +15,7 @@
 .forms__row{
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 12px;
 }
 .forms__label{
     flex: 1;
@@ -28,14 +29,15 @@
     margin-bottom: 20px;
 }
 .forms__input{
-    border:1px solid transparent;
+    border: 3px solid transparent;
     width: 100%;
     line-height: 1.42;
     padding: 18px 12px ;
     color: $black;
+    border-radius: 5px;
    
     &:focus{
-        border:1px solid $lightGold;
+        border:3px solid $lightGold;
         
         outline: none;
     }
