--- a/scss/blocks/feature.scss
+++ b/scss/blocks/feature.scss
@@ -6,12 +6,12 @@
 }
 .feature__icon{
  
-    margin-right: 12px;
+    margin-right: rem(12px);
     flex-shrink: 0;
 }
 .feature__desc{
-    max-width: 114px;
-    font-size: 16px;
+    max-width: rem(114px);
+    font-size: rem(16px);
     padding: 0 7% 0 0;
     line-height: 1.2;   
 }
