--- a/scss/layout/variables.scss
+++ b/scss/layout/variables.scss
@@ -1,3 +1,5 @@
+
+
 $containerWidth: 940px;
 $z-fixed-menu:100;
 /*var fonts*/
@@ -17,3 +19,6 @@ $z-fixed-menu:100;
     $gray:#666666;
 
 
+/*breakpoints*/
+    $tablets:768px;
+    $phones:480px;
