--- a/scss/blocks/advantages.scss
+++ b/scss/blocks/advantages.scss
@@ -1,8 +1,15 @@
 .advantages{
     display: flex;
+
     justify-content: center;
     text-align: center;
-
+    
+    @include phones{
+        flex-direction: column;
+        flex:1;
+        height: 90%;
+        justify-content: space-between;
+    }
 }
 .advantages__item{
     flex:1;
@@ -13,9 +20,12 @@
         content: url('../img/decor/decor__why/Shape.png');
         display: block;
         position: absolute;
-        top: 60px;
+        top: rem(60px);
         right: 0;
         transform: translateX(50%);
+        @include phones{
+            display: none;
+        }
     }
     &:first-child{
         padding-left: 0;
