--- a/scss/blocks/btn.scss
+++ b/scss/blocks/btn.scss
@@ -1,11 +1,13 @@
 .btn{
     display: inline-flex;
     align-items: center;
-    padding: 21px 41px;
-    border-radius: 100px;
+    padding: rem(21px) rem(41px);
+    border-radius: rem(100px);
     font-weight: 800;
     text-transform: uppercase;
-    font-size: 16px;
+    font-size: rem(16px);
+
+  
 
     &_theme_white{
         background: #fff;
@@ -28,7 +30,7 @@
     }
     &_theme_noBg{
         background: transparent;
-        font-size: 18px;
+        font-size: rem(18px);
         font-weight: 400;
         text-transform: none;
         color: #497870;
