--- a/scss/blocks/checkbox.scss
+++ b/scss/blocks/checkbox.scss
@@ -1,8 +1,8 @@
 .checkbox{
     display: flex;
     cursor: pointer;
-    margin-bottom: 10px;
-    margin-right: 10px;
+    margin-bottom: rem(10px);
+    margin-right: rem(10px);
 
     &:last-child{
         margin-right: 0;
@@ -18,11 +18,11 @@
     content: "";
     display: block;
     background: #FFF;
-    width: 25px;
-    height: 25px;
+    width: rem(25px);
+    height: rem(25px);
     border-radius: 25%;
     position: relative;
-    margin-right: 10px;
+    margin-right: rem(10px);
 
     &:last-child{
 
@@ -32,13 +32,13 @@
     &::before{
         content: '';
         display: none;
-        width: 13px;
-        height: 13px;
+        width: rem(13px);
+        height: rem(13px);
     
         
         background: url("../img/decor/decor_forms/Vector.svg") center center no-repeat;
        
-        background-size:13px 13px;
+        background-size:rem(13px) rem(13px);
         position: absolute;
         top: 50%;
         left: 50%;
