--- a/scss/blocks/interactive-avatar.scss
+++ b/scss/blocks/interactive-avatar.scss
@@ -1,16 +1,16 @@
 .interactive-avatar{
-    width: 74px;
-    height: 74px;
+    width: rem(74px);
+    height: rem(74px);
     border-radius: 50%;
-    border:6px solid transparent;
+    border:rem(6px) solid transparent;
     overflow: hidden;
     position: relative;
 
     &_active{
-        border:6px solid $green;
+        border:rem(6px) solid $green;
     }
     &:hover{
-        border:6px solid $green;
+        border:rem(6px) solid $green;
         transition: .6s;
     }
 
@@ -32,7 +32,7 @@
     object-fit: cover;
 }
 .reviews__switcher-item{
-    margin-right: 6px;
+    margin-right: rem(6px);
 
     &:last-child{
         margin-right: 0;
