--- a/scss/blocks/radio.scss
+++ b/scss/blocks/radio.scss
@@ -1,8 +1,8 @@
 .radio{
     display: flex;
     cursor: pointer;
-    margin-bottom: 10px;
-    margin-right: 23px;
+    margin-bottom: rem(10px);
+    margin-right: rem(23px);
 
     &:last-child{
         margin-right: 0;
@@ -30,11 +30,11 @@
     content: "";
     display: block;
     background: #FFF;
-    width: 25px;
-    height: 25px;
+    width: rem(25px);
+    height: rem(25px);
     border-radius: 50%;
     position: relative;
-    margin-right: 10px;
+    margin-right: rem(10px);
 
     &:last-child{
 
@@ -43,8 +43,8 @@
     &::before{
         content: '';
         display: none;
-        width: 13px;
-        height: 13px;
+        width: rem(13px);
+        height: rem(13px);
         border-radius: 50%;  
         background: $green;
         position: absolute;
