--- a/scss/blocks/sections.scss
+++ b/scss/blocks/sections.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    min-height: 650px;
+    min-height: rem(650px);
     height: 100vh;
 
     
@@ -11,12 +11,26 @@
     background: url('../img/decor/decor__why/leaf4.png') left center no-repeat;
     position: relative;
 
+    @include tablets{
+        background-position: left top 17%;
+    }
+    @include phones{
+        background: none;
+     
+    }
     &::before{
         content: url('../img/decor/decor__why/razz.png');
         display: block;
         position: absolute;
         left: 0;
-        bottom: -115px;
+        bottom: rem(-115px);
+   
+    }
+    &::before, &::after{
+        @include phones{
+            display: none;
+            
+        }
     }
 }
 .section-reviews{
@@ -26,7 +40,7 @@
         display: block;
         position: absolute;
         left: 0;
-        bottom: -86px;
+        bottom: rem(-86px);
         z-index: 2;
     }
     &::before{
@@ -34,9 +48,17 @@
         display: block;
         position: absolute;
         left: 0;
-        bottom: -160px;
+        bottom: rem(-160px);
         
     }
+    @include tablets{
+        .top-line__title{
+            padding: 0;
+            margin-bottom: rem(33px);
+        }
+    }
+
+  
 }
 .sections-forms{
     background: url('../img/bg/bg_forms.png') no-repeat;
@@ -47,7 +69,7 @@
         display: block;
         position: absolute;
         right: 1%;
-        bottom: 110px;
+        bottom: rem(110px);
     }
 
     &::before{
@@ -56,11 +78,25 @@
         display: block;
         position: absolute;
         left: 5%;
-        bottom: 110px;
+        bottom: rem(110px);
+    }
+    &::before, &::after{
+        @include tablets{
+            display: none;
+            
+        }
     }
 }
 .sections-forms__title{
     color: $green;
     text-align: center;
-    margin-bottom: 83px;
+    margin-bottom: rem(83px);
+
+    @include tablets{
+        margin-bottom: rem(30px);
+    }
+    @include phones{
+        font-size: rem(40px);
+        margin-bottom: rem(39px);
+    }
 }
