--- a/scss/layout/base.scss
+++ b/scss/layout/base.scss
@@ -1,12 +1,22 @@
 *{
     box-sizing: border-box;
 }
+html{
+    font-size: $baseFontSize;
+
+
+    @include phones{
+        font-size: $baseFontSize -  2;
+    }
+        
+}
 html,body{
     height: 100%;
+
 }
 
 body{
-    font-size: $baseFontSize;
+    
     font-family: 'Alegreya Sans', Arial, Helvetica, sans-serif;
     line-height: 1.42; 
     -webkit-font-smoothing: antialiased;
@@ -51,7 +61,7 @@ img{
 }
 .wrapper{
     overflow: hidden;
-    min-width: $containerWidth+20;
+    
     min-height: 100%;
     display: flex;
     flex-direction: column;
@@ -61,7 +71,8 @@ img{
 
 
 .container{
-    width: $containerWidth;
+    width: 95%;
+    max-width: $containerWidth;
     margin: 0 auto;
     position: relative;
 }
