--- a/scss/blocks/reviews.scss
+++ b/scss/blocks/reviews.scss
@@ -98,7 +98,7 @@
 }
 .reviews__title{
     margin-bottom: rem(12px);
-    text-transform: unset;
+    text-transform: none;
 }
 .reviews__text-desc{
     margin-bottom: rem(25px);
