--- a/css/main.css
+++ b/css/main.css
@@ -452,12 +452,14 @@ img {
 @media screen and (max-width: 768px) {
   .hero {
     background-position: right top 25%;
+    min-height: 36.1111111111rem;
   }
 }
 @media screen and (max-width: 480px) {
   .hero {
     background-size: 18rem 22.7777777778rem;
     background-position: right top 18%;
+    min-height: 36.1111111111rem;
   }
 }
 .hero::before {
@@ -493,6 +495,11 @@ img {
     background: none;
   }
 }
+@media screen and (max-width: 480px) {
+  .hero__container {
+    justify-content: space-between;
+  }
+}
 .hero__container::before {
   content: url("../img/decor/decor__hero/berries1.png");
   display: block;
@@ -516,13 +523,14 @@ img {
 .hero__content {
   display: flex;
   flex-direction: column;
-  min-height: 650px;
-  justify-content: space-between;
+  min-height: 27.7777777778rem;
+  justify-content: center;
   overflow: hidden;
   width: 46%;
 }
 @media screen and (max-width: 768px) {
   .hero__content {
+    min-height: 95%;
     width: 100%;
     flex: 1;
     display: flex;
@@ -549,6 +557,7 @@ img {
     justify-content: center;
     align-items: center;
     text-align: center;
+    min-height: 95%;
   }
   .hero__content::before {
     content: "";
@@ -599,6 +608,9 @@ img {
   }
 }
 
+.hero__features {
+  padding: 0 0 2.7777777778rem 0;
+}
 @media screen and (max-width: 768px) {
   .hero__features {
     display: none;
@@ -686,6 +698,7 @@ img {
 }
 
 .phone__icon {
+  fill: #fff;
   width: 0.7777777778rem;
   height: 0.7777777778rem;
 }
@@ -753,9 +766,18 @@ img {
   align-items: flex-start;
 }
 
-.feature__icon {
+.feature__icons {
   margin-right: 0.6666666667rem;
   flex-shrink: 0;
+  fill: #C6F7FF;
+  width: 2.0555555556rem;
+  height: 2.0555555556rem;
+}
+
+.feature__icon {
+  fill: #C6F7FF;
+  width: 2.1111111111rem;
+  height: 2.1111111111rem;
 }
 
 .feature__desc {
@@ -1140,7 +1162,7 @@ img {
 
 .reviews__title {
   margin-bottom: 0.6666666667rem;
-  text-transform: unset;
+  text-transform: none;
 }
 
 .reviews__text-desc {
