исправления картинки, вторая неделя

--- a/scss/blocks/hero.scss
+++ b/scss/blocks/hero.scss
@@ -118,7 +118,7 @@
             min-height: rem(338px);
             width: rem(325px);
             height: rem(338px);
-            background:  url('../../img/decor/decor__hero/comp_tablets.png') center center / contain no-repeat;
+            background:  url('../img/decor/decor__hero/comp_tablets.png') center center / contain no-repeat;
        
         }
     
@@ -138,7 +138,7 @@
             display: flex;
             width: rem(325px);
             height: rem(338px);
-            background:  url('../../img/decor/decor__hero/comp_tablets.png') center center / contain no-repeat;
+            background:  url('../img/decor/decor__hero/comp_tablets.png') center center / contain no-repeat;
           
             margin-bottom: rem(23px);
         }
