--- a/scss/blocks/advantages.scss
+++ b/scss/blocks/advantages.scss
@@ -23,6 +23,9 @@
         top: rem(60px);
         right: 0;
         transform: translateX(50%);
+        @include tablets{
+            display: none;
+        }
         @include phones{
             display: none;
         }
