--- a/scss/blocks/forms.scss
+++ b/scss/blocks/forms.scss
@@ -64,7 +64,7 @@
         outline: none;
     }
     &_textarea{
-        height: rem(152px);
+        height: rem(172px);
         resize: none;
         @include tablets{
             height: rem(82px);
@@ -88,11 +88,15 @@
 }
 .form__btns{
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     flex: 1;
-    
-    
+    @include tablets{
+        justify-content: center;
+    }
+    @include phones{
+        justify-content: center;
+    }
 }
 
 
