--- a/scss/blocks/reviews.scss
+++ b/scss/blocks/reviews.scss
@@ -117,7 +117,7 @@
 
 
 .reviews__author{
-    font-size: $baseFontSize;
+    font-size: rem($baseFontSize);
     font-weight:500;
     color: $black;
 }
