--- a/scss/layout/base.scss
+++ b/scss/layout/base.scss
@@ -4,9 +4,12 @@
 html{
     font-size: $baseFontSize;
 
-
+    @include tablets{
+        font-size: $baseFontSize -  1px;
+    }
+        
     @include phones{
-        font-size: $baseFontSize -  2;
+        font-size: $baseFontSize -  2px;
     }
         
 }
