--- a/scss/layout/variables.scss
+++ b/scss/layout/variables.scss
@@ -5,9 +5,9 @@ $z-fixed-menu:100;
 /*var fonts*/
     $baseFontSize: 18px;
 /*var titles*/
-    $titleSizeXl: 48px;
-    $titleSizeL: 36px;
-    $titleSizeM: 27px;
+    $titleSizeXl: rem(48px);
+    $titleSizeL: rem(36px);
+    $titleSizeM: rem(27px);
 
 /*var colors*/
     $light:#F2F5F4;
