--- a/css/main.css
+++ b/css/main.css
@@ -351,6 +351,11 @@ template {
 html {
   font-size: 18px;
 }
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 17px;
+  }
+}
 @media screen and (max-width: 480px) {
   html {
     font-size: 16px;
@@ -430,11 +435,11 @@ img {
   color: #292929;
 }
 .title_size_xl {
-  font-size: 48px;
+  font-size: rem(48px)/18px0rem;
   line-height: 1.2;
 }
 .title_size_m {
-  font-size: 27px;
+  font-size: rem(27px)/18px0rem;
 }
 
 .hero__title {
@@ -470,11 +475,11 @@ img {
   bottom: -2.2222222222rem;
 }
 .hero::after {
-  content: url("../img/decor/decor__hero/leaf1.png");
+  content: url("../img/decor/decor__hero/berries_and_leaf.png");
   display: block;
   position: absolute;
-  right: 1%;
-  bottom: 6.1111111111rem;
+  right: 6%;
+  bottom: -3.1111111111rem;
 }
 @media screen and (max-width: 768px) {
   .hero::before, .hero::after {
@@ -498,25 +503,6 @@ img {
 @media screen and (max-width: 480px) {
   .hero__container {
     justify-content: space-between;
-  }
-}
-.hero__container::before {
-  content: url("../img/decor/decor__hero/berries1.png");
-  display: block;
-  position: absolute;
-  right: 0%;
-  bottom: 1.6666666667rem;
-}
-.hero__container::after {
-  content: url("../img/decor/decor__hero/leaf2.png");
-  display: block;
-  position: absolute;
-  right: 2%;
-  bottom: -2.2222222222rem;
-}
-@media screen and (max-width: 768px) {
-  .hero__container::before, .hero__container::after {
-    display: none;
   }
 }
 
@@ -617,26 +603,9 @@ img {
   }
 }
 
-.decor_berries {
-  width: 5.5555555556rem;
-  height: 5.5555555556rem;
-}
-.decor_berries::before {
-  content: url("../img/decor/decor__hero/berries2.png");
-  display: block;
-  position: absolute;
-  right: 6%;
-  bottom: -3.1111111111rem;
-}
-@media screen and (max-width: 768px) {
-  .decor_berries::before {
-    display: none;
-  }
-}
-
 .header {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   margin-bottom: 2.2222222222rem;
 }
@@ -650,8 +619,15 @@ img {
   margin-right: 2.2222222222rem;
 }
 
+.header__logo {
+  width: 2.8888888889rem;
+  height: 2.1111111111rem;
+  fill: #fff;
+}
+
 .menu {
   flex: 1;
+  padding-top: 0.2777777778rem;
 }
 @media screen and (max-width: 768px) {
   .menu {
@@ -662,11 +638,13 @@ img {
 .menu__list {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
 .menu__item {
   margin-right: 1.5rem;
+  margin-bottom: 0.5555555556rem;
 }
 .menu__item:last-child {
   margin-right: 0;
@@ -950,6 +928,11 @@ img {
   right: 0;
   transform: translateX(50%);
 }
+@media screen and (max-width: 768px) {
+  .advantages__item::before {
+    display: none;
+  }
+}
 @media screen and (max-width: 480px) {
   .advantages__item::before {
     display: none;
@@ -1002,6 +985,7 @@ img {
 .advantage__img {
   width: 3.5555555556rem;
   height: 3.7777777778rem;
+  fill: #2C2E2D;
 }
 
 .advantage__title {
@@ -1016,7 +1000,7 @@ img {
 
 .advantage__text-desc p {
   font-weight: 300;
-  font-size: 18px;
+  font-size: 1rem;
 }
 
 .top-line {
@@ -1058,7 +1042,7 @@ img {
 
 .top-line__subtitle {
   max-width: 24.2222222222rem;
-  font-size: 18px;
+  font-size: 1rem;
   font-weight: 400;
   text-align: center;
   color: #666666;
@@ -1178,7 +1162,7 @@ img {
 }
 
 .reviews__author {
-  font-size: 18px;
+  font-size: 1rem;
   font-weight: 500;
   color: #292929;
 }
@@ -1307,7 +1291,7 @@ img {
   outline: none;
 }
 .forms__input_textarea {
-  height: 8.4444444444rem;
+  height: 9.5555555556rem;
   resize: none;
 }
 @media screen and (max-width: 768px) {
@@ -1331,9 +1315,19 @@ img {
 
 .form__btns {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex: 1;
+}
+@media screen and (max-width: 768px) {
+  .form__btns {
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 480px) {
+  .form__btns {
+    justify-content: center;
+  }
 }
 
 .forms__btn {
