--- a/scss/layout/variables.scss
+++ b/scss/layout/variables.scss
@@ -5,7 +5,7 @@ $z-fixed-menu:100;
 /*var fonts*/
     $baseFontSize: 18px;
 /*var titles*/
-    $titleSizeXl: rem(48px);
+    $titleSizeXl: 48px;
     $titleSizeL: rem(36px);
     $titleSizeM: rem(27px);
 
