--- a/scss/blocks/hero.scss
+++ b/scss/blocks/hero.scss
@@ -11,11 +11,13 @@
     @include tablets{
         background-position: right top 25%; 
         min-height: rem(650px);   
+        height: 100%;
     }
     @include phones{
         background-size: rem(324px) rem(410px);
         background-position: right top 18%;
-        min-height: rem(650px);    
+        min-height: rem(650px);
+        height: 100%;    
     }
 
     
@@ -64,32 +66,7 @@
         justify-content: space-between;
     }
 
-    // &::before{
-    //     content: url('../img/decor/decor__hero/berries1.png');
-        
-    //     display: block;
-    //     position: absolute;
-    //     right: 0%;
-    //     bottom: rem(30px);
-    // }
-
-
-
-
-    // &::after{
-    //     content: url('../img/decor/decor__hero/leaf2.png');
-        
-    //     display: block;
-    //     position: absolute;
-    //     right: 2%;
-    //     bottom: rem(-40px);
-    // }
-    // &::before, &::after{
-    //     @include tablets{
-    //         display: none;
-            
-    //     }
-    // }
+    
 
 
     
@@ -141,7 +118,7 @@
             height: rem(338px);
             background:  url('../img/decor/decor__hero/comp_tablets.png') center center / contain no-repeat;
           
-            margin-bottom: rem(23px);
+            margin-bottom: proc(23px);
         }
     }
 }
