--- a/css/main.css
+++ b/css/main.css
@@ -820,6 +820,25 @@ img {
   }
 }
 
+.sections__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  background: url("../img/bg/bars.png") right center/50% no-repeat;
+  padding: 1.3333333333rem 0rem 3.2777777778rem 0rem;
+}
+@media screen and (max-width: 768px) {
+  .sections__container {
+    background: none;
+  }
+}
+@media screen and (max-width: 480px) {
+  .sections__container {
+    justify-content: space-between;
+  }
+}
+
 .section-why {
   background: url("../img/decor/decor__why/leaf4.png") left center no-repeat;
   position: relative;
