--- a/scss/blocks/sections.scss
+++ b/scss/blocks/sections.scss
@@ -14,6 +14,28 @@
      
     }
 }
+.sections__container{
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between;
+    
+    height: 100%;
+    background: url("../img/bg/bars.png") right center/50% no-repeat;
+    padding: rem(24px) rem(0px) rem(59px) rem(0px);
+    
+    @include tablets{
+        background: none;
+        
+    }
+    @include phones{
+        justify-content: space-between;
+    }
+
+    
+
+
+    
+}
 .section-why{
     background: url('../img/decor/decor__why/leaf4.png') left center no-repeat;
     position: relative;
